hotel_statistic API created
