# docs/swagger.json
@@ -4,7 +4,37 @@
         "contact": {}
     },
     "paths": {
-        "/dashboard/mostLoyalHotels": {
+        "/dashboard/hotel_statistic": {
+            "get": {
+                "description": "Show amount of hotelsStatistic",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dashboard"
+                ],
+                "summary": "Show hotelsStatistic",
+                "operationId": "hotelsStatistic",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.hotelStatisticResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
+        "/dashboard/most_loyal_hotels": {
             "get": {
                 "description": "Show all dashboards mostLoyalHotels",
                 "consumes": [
@@ -36,6 +66,17 @@
         }
     },
     "definitions": {
+        "entity.HotelStatistic": {
+            "type": "object",
+            "properties": {
+                "published": {
+                    "type": "integer"
+                },
+                "registered": {
+                    "type": "integer"
+                }
+            }
+        },
         "entity.MostLoyalHotels": {
             "type": "object",
             "properties": {
@@ -56,6 +97,14 @@
                 },
                 "totalAmount": {
                     "type": "integer"
+                }
+            }
+        },
+        "v1.hotelStatisticResponse": {
+            "type": "object",
+            "properties": {
+                "HotelStatistic": {
+                    "$ref": "#/definitions/entity.HotelStatistic"
                 }
             }
         },
